--- a/CPT211_Assignment2/mystyle2.css
+++ b/CPT211_Assignment2/mystyle2.css
@@ -360,7 +360,7 @@ section {
 	font-size: 16px;
 	text-align: center;
 	color: white;
-	cursor: url('images/thirty.png'), pointer; /*specific cursor in content area when hover*/
+	/*cursor: url('images/thirty.png'), pointer; specific cursor in content area when hover*/
 }
 
 /*Setting for title 'about us'*/
